# pocket_docent_python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pocket_docent/: __init__.py  demo.py  main.py  register.py  search.py
src/pocket_docent/model/: encode_image_model.py  grounding_dino_model.py  helper.py  utils.py
