[project]
name = "pocket-docent"
version = "0.1.0"
description = "Detect works of art based on an image"
authors = [
    { name = "Jongmin Park", email = "gzu@grandeclip.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit==4.2.0",
    "black==24.10.0",
    "isort==6.0.1",
    "flake8==7.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pocket_docent"]

[tool.rye.scripts]
service = "rye run python src/pocket_docent/main.py"
lint = "pre-commit run --all-files"
